make key equivs work when a plugin has focus on Mac OS X. b=428047 r=smichaud sr=roc a=mconnor